Make config deployable: env vars for DB/JWT/CORS, configurable API URL